changed some stuff